# lazymodule

./: README.md  pyproject.toml  setup.py
src/lazymodule/: __init__.py
src/lazymodule/models/: __init__.py  modeling_pt.py  modeling_tf.py
src/lazymodule/utils/: __init__.py  dummy_pt.py  dummy_tf.py  import_utils.py
