[project]
name = "lazymodule"
version = "0.0.1"
description = "experimental code for pack-up module and register module"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["deep learning"]
authors = [
    {email = "hzji210@gmail.com"},
    {name =" statelesshz" }
]
requires-python = ">=3.8"
classifiers = [
    # Update if needed. See https://pypi.org/classifiers/
    "Development Status :: 1 - Planning",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
  "numpy",
]

[project.optional-dependencies]
style = ["black", "ruff", "isort"]  # 学习下black&ruff&isort的用法
test = ["pytest", "pytest-cov"]
pt = ["torch"]
tf = ["tensorflow-cpu>=2.6"]
all = ["lazymodule[test]", "lazymodule[test]"]

[project.urls]
"Homepage" = "https://github.com/statelesshz/lazymodule"
"Bug Tracker" = "https://github.com/statelesshz/lazymodule/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Release checklist
# 1. Checkout the release branch (for a patch the current release branch, for a new minor version, create one):
#      git checkout -b vXX.xx-release
#    The -b is only necessary for creation (so remove it when doing a patch)
# 2. Change the version in __init__.py and setup.py to the proper value.
# 3. Commit these changes with the message: "Release: v<VERSION>"
# 4. Add a tag in git to mark the release:
#      git tag v<VERSION> -m 'Adds tag v<VERSION> for pypi'
#    Push the tag and release commit to git: git push --tags origin vXX.xx-release
# 5. Run the following commands in the top-level directory:
#      rm -rf dist
#      python -m build
# 6. Upload the package to the pypi test server first:
#      twine upload dist/* -r testpypi
# 7. Check that you can install it in a virtualenv by running:
#      pip install lazymodule
#      pip uninstall lazymodule
#      pip install -i https://testpypi.python.org/pypi lazymodule
# 8. Upload the final version to actual pypi:
#      twine upload dist/* -r pypi
# 9. Add release notes to the tag in github once everything is looking hunky-dory.
# 10. Go back to the main branch and update the version in __init__.py, setup.py to the new version ".dev" and push to
#     main.
